# spbuild

./: CODE_OF_CONDUCT.md  Cargo.toml  README.md  example_config.json
example_project/: config.json
example_project/alpha/: main.cpp
example_solution/: spbuild.json
example_solution/alpha/: main.cpp
example_solution/beta/: lib.cpp  lib.h
src/: config_parser.rs  main.rs  project.rs  solution.rs  target.rs
src/compiler_interfaces/: common.rs  gcc.rs  msvc.rs
src/dependency_manager/: dependency_resolver.rs
src/helpers/: console.rs  file_tools.rs  version_tools.rs
